--- a/QinR/DESCRIPTION
+++ b/QinR/DESCRIPTION
@@ -2,10 +2,14 @@ Package: QinR
 Type: Package
 Title: QinR: Queueing Models in R
 Version: 0.1.0
-Author: Who wrote it
+Author: Angyalka Valcsics, Pearl Armstrong, Shawn Houser
 Maintainer: The package maintainer <pearl.armstrong@maine.edu>
-Description: QinR: using event-oriented bookkeeping to create a queueing model. 
+Description: QinR: Statistical Package for Queueing in R
 License: 
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
